RESOLVED FIXED76236
A warning is logged to console when typing a bare "/" in Safari address bar
https://bugs.webkit.org/show_bug.cgi?id=76236
Summary A warning is logged to console when typing a bare "/" in Safari address bar
Alexey Proskuryakov
Reported 2012-01-12 17:35:03 PST
12.01.12 17:28:55,414 Safari: CFURLCreateAbsoluteURLWithBytes was passed these invalid relativeURLBytes (and no baseURL): '/' (a file system path instead of an URL string). The URL created will not work with most file URL functions. CFURLCreateFromFileSystemRepresentationRelativeToBase should be used instead. We should prevent this.
Attachments
proposed fix (1.57 KB, patch)
2012-01-12 17:37 PST, Alexey Proskuryakov
sullivan: review+
follow-up fix (1.39 KB, patch)
2012-01-16 16:02 PST, Alexey Proskuryakov
sullivan: review+
Alexey Proskuryakov
Comment 1 2012-01-12 17:37:46 PST
Created attachment 122350 [details] proposed fix This method is half-obsolete, but I'm not sure which other bottlenecks to patch. Maybe there aren't any yet.
Alexey Proskuryakov
Comment 2 2012-01-12 17:40:01 PST
This has a strange effect on where Safari tries to go when "/" is entered - I'm going to look into that separately.
Alexey Proskuryakov
Comment 3 2012-01-13 14:53:35 PST
> This has a strange effect on where Safari tries to go when "/" is entered - I'm going to look into that separately. That turned out to be in Safari code.
Alexey Proskuryakov
Comment 4 2012-01-16 10:50:52 PST
Alexey Proskuryakov
Comment 5 2012-01-16 16:02:44 PST
Created attachment 122690 [details] follow-up fix
Alexey Proskuryakov
Comment 6 2012-01-16 16:05:27 PST
Note You need to log in before you can comment on or make changes to this bug.