        A warning is logged to console when typing a bare "/" in Safari address bar         https://bugs.webkit.org/show_bug.cgi?id=76236

Reviewed by John Sullivan.

        * Misc/WebNSURLExtras.mm: (+[NSURL _web_URLWithData:relativeToURL:]): Bail out early for paths.



Canonical link: https://commits.webkit.org/93210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105077 268f45cc-cd09-0410-ab3c-d52691b4dbfc